@@ -1,3 +1,8 @@
+2007-10-20  higepon  <higepon@users.sourceforge.jp>
+
+        * Multimedia/audio_server/happy/SongButton.h Added for clickable song title label.
+                                                     Left aligned song titles.
+
 2007-10-19  higepon  <higepon@users.sourceforge.jp>
 
         * Multimedia/audio_server/happy/GUIPlayer.cpp (GUIPlayer::playLoop): You can click a song title button.
